--- a/의존성 주입/의존성 주입.md
+++ b/의존성 주입/의존성 주입.md
@@ -1,1 +1,64 @@
 # 의존성 주입이란?
+소프트웨어 공학에서 말하는 의존성 주입은 하나의 객체에 다른 객체의 의존성을 제공하는 기술을 말합니다.<br>
+여기서 말하는 의존성이란 객체지향에서 두 클래스 간의 관계입니다.
+
+~~~kotlin
+class Car {
+
+    private val engine = Engine()
+
+    fun start() {
+        engine.start()
+    }
+}
+
+fun main(args: Array) {
+    val car = Car()
+    car.start()
+}
+~~~
+(의존성 주입을 하지 않은 코드)
+<br>
+
+Car 클래스가 생성되면서 Engine도 같이 생성되는 단단히 결합되는 모습이 보입니다.<br>
+다른 엔진으로 변경하고 싶어도 바꿀 수 없습니다.
+이를 "Car 클래스가 Engine클래스에 의존성을 갖는다."라고 할 수 있습니다.<br><br><br>
+
+
+
+# 의존성 주입을 사용하는 이유?
+다시 Car와 Engine의 관계를 확인해보면 Car는 Engine이라는 한 가지 타입에 의존합니다.<br>
+하지만 사용자는 다른타입의 Engine으로 교체할 수도 있습니다.<br>
+예를들어 Engine을 ElectricEngine으로 교체하고싶다면 기존 Engine명을 ElectricEngine으로 변경하거나,<br>
+새로 만들어야합니다.
+<br>
+
+~~~kotlin
+class Car(private val engine: Engine) {
+    fun start() {
+        engine.start()
+    }
+}
+
+fun main(args: Array) {
+    val engine = Engine()
+    val car = Car(engine)
+    car.start()
+}
+~~~
+(의존성 주입을 사용한 코드)<br>
+Car의 인스턴스는 초기화시 engine객체를 생성자의 매개변수로 받습니다.<br>
+<br>
+의존성 주입을 사용하면서 오는 이점은 다음과 같습니다.<br>
+
+<ul>
+  <li>클래스의 재사용(Car) Engine의 다양한 구현을 Car에 전달이 가능합니다.</li>
+  <li>주입하는 코드만 따로 변경하기 쉬워 리팩토링이 수월합니다.</li>
+  <li>의존성 주입의 결과로 stub이나 mock 객체를 이용하여 단위테스트가 쉬워진다는데..(이 부분은 공부하고 다시 포스팅하기!)</li>
+  <li>클래스간의 결합도를 느슨하게 해줍니다.</li>
+</ul>  
+
+
+
+
+
