--- a/의존성 주입/의존성 주입.md
+++ b/의존성 주입/의존성 주입.md
@@ -59,6 +59,13 @@ Car의 인스턴스는 초기화시 engine객체를 생성자의 매개변수로
 </ul>  
 
 
+<br><br><br>
+공부 자료 :<br> 
+아키텍처를 알아야 앱 개발이 보인다 2장 의존성 주입 기법<br>
+안드로이드 공식 문서 : https://developer.android.com/training/dependency-injection
+          
+
+
 
 
 
