--- a/의존성 주입/의존성 주입.md
+++ b/의존성 주입/의존성 주입.md
@@ -4,34 +4,25 @@
 
 ~~~kotlin
 class Car {
-
     private val engine = Engine()
-
     fun start() {
         engine.start()
     }
 }
 
-fun main(args: Array) {
+override fun onCreate(savedInstanceState: Bundle?) {
+    super.onCreate(savedInstanceState)
+    setContentView(R.layout.activity_main)
+
     val car = Car()
     car.start()
 }
 ~~~
 (의존성 주입을 하지 않은 코드)
-<br>
 
 Car 클래스가 생성되면서 Engine도 같이 생성되는 단단히 결합되는 모습이 보입니다.<br>
 다른 엔진으로 변경하고 싶어도 바꿀 수 없습니다.
-이를 "Car 클래스가 Engine클래스에 의존성을 갖는다."라고 할 수 있습니다.<br><br><br>
-
-
-
-# 의존성 주입을 사용하는 이유?
-다시 Car와 Engine의 관계를 확인해보면 Car는 Engine이라는 한 가지 타입에 의존합니다.<br>
-하지만 사용자는 다른타입의 Engine으로 교체할 수도 있습니다.<br>
-예를들어 Engine을 ElectricEngine으로 교체하고싶다면 기존 Engine명을 ElectricEngine으로 변경하거나,<br>
-새로 만들어야합니다.
-<br>
+이를 "Car 클래스가 Engine클래스에 의존성을 갖는다."라고 할 수 있습니다.<br>
 
 ~~~kotlin
 class Car(private val engine: Engine) {
@@ -46,10 +37,100 @@ fun main(args: Array) {
     car.start()
 }
 ~~~
+<br>
 (의존성 주입을 사용한 코드)<br>
 Car의 인스턴스는 초기화시 engine객체를 생성자의 매개변수로 받습니다.<br>
+의존 관계에 있는 클래스의 객체를 외부로 부터 생성하여 주입받습니다.<br><br>
+
+
+
+# 의존성 주입의 필요성
+
+### - 변경의 전이
+다시 Car와 Engine의 관계를 확인해보면 Car는 Engine이라는 한 가지 타입에 의존합니다.<br>
+하지만 사용자는 다른타입의 Engine으로 교체할 수도 있습니다.<br>
+예를들어 Engine을 ElectricEngine으로 교체하고싶다면 기존 Engine명을 ElectricEngine으로 변경하거나,<br>
+새로 만들어야합니다. 여기서 문제점은 Engine클래스를 의존하는 Car클래스도 같이 변경해야하는 점 입니다.
 <br>
-의존성 주입을 사용하면서 오는 이점은 다음과 같습니다.<br>
+
+~~~kotlin
+class Car {
+
+    private val electricEngine = ElectricEngine() // 변경됨
+
+    fun start() {
+        electricEngine.start() // 변경됨
+    }
+}
+~~~
+하나의 클래스를 변경함으로써 의존 관계까지 변경 사항이 전이됩니다.<br>
+이를 `변경의 전이`라고 부릅니다.<br>
+
+`변경의 전이`를 해결할 방법은 Car가 의존하는 Engine을 interface로 만들어야합니다.<br>
+Engine을 구현한 어떤 클래스 간에 Car의 Engine으로 기능할 수 있습니다.
+~~~kotlin
+interface Engine { fun start() }
+~~~
+
+~~~kotlin
+class ElectricEngine : Engine {
+    override fun start() {
+        Log.d("ElectricEngine : ", "전기엔진 시동")
+    }
+}
+~~~
+
+~~~kotlin
+class GasEngine : Engine {
+    override fun start() {
+        Log.d("GasEngine : ", "가스엔진 시동")
+    }
+}
+~~~
+
+~~~kotlin
+class Car() {
+    private val engine : Engine = GasEngine()
+    // private val engine : Engine = ElectricEngine()
+
+    fun start(){
+        engine.start()
+    }
+}
+~~~
+
+하지만 여전히 문제점은 남아있습니다. Engine을 인터페이스로 변경하면서 `변경의 전이`는 최소화했지만<br>
+Car 클래스에서 새롭게 다른 Engine 클래스(ElectricEngine())를 사용한다면 또 다시 Car 클래스를 변경해야 합니다.<br><br>
+
+### - 제어의 역전(Ioc, Inversion of Control)
+제어의 역전은 어떠한 일을 수행하도록 만들어진 프레임워크에 제어권을 위임하여 관심사를 분리하는 것을 의미합니다.<br><br>
+
+~~~kotlin
+class Car(private val engine: Engine) {
+    fun start(){
+        engine.start()
+    }
+}
+~~~
+~~~kotlin
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        val gasEngine = GasEngine()
+        val gasCar = Car(gasEngine)
+        gasCar.start()
+    }
+~~~
+
+Car 클래스에서 Engine객체를 만들지 않고, 생성자로 객체를 제체를 제공받습니다.<br>
+기존 코드에선 Car 클래스에서 Engine 객체를 생성하고 관리했으나 개선된 코드에선<br>
+Engine 객체의 생성 및 관리를 외부(main)에 위임했습니다. 이를 `제어의 역전`이라고 합니다.<br>
+
+제어의 역전을 통해 결합도를 약하게 만들었고, Car 클래스는 이제 Engine의 변경 사항에 의해 내부필드나<br>
+메서드의 매개변수를 변경하지 않아도 됩니다.<br><br>
+
+# 의존성 주입을 사용하면서 오는 이점
 
 <ul>
   <li>클래스의 재사용(Car) Engine의 다양한 구현을 Car에 전달이 가능합니다.</li>
