--- a/코루틴과 동시성 프로그래밍/스코프빌더.md
+++ b/코루틴과 동시성 프로그래밍/스코프빌더.md
@@ -78,7 +78,8 @@ World!<br>
 `laucnh`의 코드 블록이 기다리는 것이다. `luanch`는 우리가 만든 코드를 Queue에 넣어두고 다음 순서를 기다린다. 
 <br><br>
 
-`delay`함수는 해당 스레드를 해제하고 잠시 쉬어가는 형태이다. 그 스레드를 다른 코루틴이 사용할 수 있게 양보한다.  
+`delay`함수는 해당 스레드를 해제하고 잠시 쉬어가는 형태이다. 그 스레드를 다른 코루틴이 사용할 수 있게 양보한다.<br>
+`delay`함수는 코루틴이나 suspend함수 안에서만 사용할 수 있다.
 ~~~kotlin
 fun main() = runBlocking {
     launch {
@@ -99,3 +100,84 @@ Hello<br>
 runBlocking 코루틴이 실행되고 delay함수로 0.5초 지연시켜서 runBlocking 코루틴을 잠시 쉬고<br>
 launch 코루틴이 실행된다. delay함수가 호출되면 해당 코드블록은 잠들게 되고 다른 스레드나 코루틴이 호출된 이후에 깨어나<br>
 그 다음 코드를 실행한다. 코루틴은 협조적으로 여러개의 코루틴이 같이 활용된다.
+<br>
+
+`delay`와 `sleep`의 차이점
+delay같은 경우는 다른 코루틴에게 수행되는 기회를 부여하지만 sleep같은 경우는 다른 코루틴에게 기회를 주지 않는다.
+~~~kotlin
+fun main() = runBlocking {
+    launch {
+        println("launch : ${Thread.currentThread().name}")
+        println("World!")
+    }
+    println("runBlocking : ${Thread.currentThread().name}")
+    Thread.sleep(500) // 0.5초를 쉬었지만, 코드의 우선권은 runBlocking이 가지고 있다.
+    // 다른 스레드에게 코드를 넘겨주지 않음.
+    println("Hello")
+}
+~~~
+실행결과 : <br>
+runBlocking : main @coroutine#1<br>
+Hello<br>
+launch : main @coroutine#2<br>
+World!<br><br>
+
+여러 launch를 실행하면 delay가 가장 중요한 역할을 한다.<br>
+delay에 시간되는 소요에 따라서 실행할 코드가 달라진다.<br><br>
+
+코루틴이 단일 스레드를 사용하는 경우에도 서로 양보한다. 코루틴은 기본적으로 계층적이다.<br>
+상위 코루틴이 하위 코루틴을 책임지는 구조로 되어있다.
+~~~kotlin
+fun main() = runBlocking {
+    launch {
+        println("launch1 : ${Thread.currentThread().name}")
+        delay(1000)
+        println("3!")
+    }
+    launch {
+        println("launch2 : ${Thread.currentThread().name}")
+        println("1!")
+    }
+    println("runBlocking : ${Thread.currentThread().name}")
+    delay(500)
+    println("2!")
+}
+~~~
+상위(부모) 코루틴 : runBlocking<br>
+하위(자식) 코루틴 : launch<br>
+
+runBlocking은 2개의 launch(하위 코루틴)가 끝날 때 까지 끝나지 않는다.<br>
+runBlocking의 작업이 끝나도 launch가 끝나지 않았다면, 기다린다.<br>
+부모 코루틴이 취소됐을경우 자식 코루틴도 같이 캔슬된다.<br>
+
+### suspend 함수
+suspend 함수는 중단 가능한 함수이다.<br>
+`delay`, `launch` 등 지금까지 봤던 함수들은 코루틴 내에서만 호출 할 수 있다. 그럼 이 함수를 포함한<br>
+코드는 어떻게 함수로 분리할 수 있을까? 코드의 일부를 함수로 분리할 땐 함수 앞에 `suspend` 키워드를 붙이면 된다.
+
+~~~kotlin
+suspend fun doThree() {
+    println("launch1: ${Thread.currentThread().name}")
+    delay(1000L)
+    println("3!")
+}
+
+suspend fun doOne() {
+    println("launch1: ${Thread.currentThread().name}")
+    println("1!")
+}
+
+suspend fun doTwo() {
+    println("runBlocking: ${Thread.currentThread().name}")
+    delay(500L)
+    println("2!")
+}
+~~~
+
+
+
+
+
+
+
+
