--- a/코루틴과 동시성 프로그래밍/서스펜딩 함수.md
+++ b/코루틴과 동시성 프로그래밍/서스펜딩 함수.md
@@ -144,6 +144,12 @@ getRandom1 is cancelled.<br>
 doSomething is cancelled.<br>
 doSomething fauled: java.lang.IllegalStateException<br>
 
+await을 사용하고 사용안하는 시점에서 코드흐름이 잘 이해가 안가는 부분이 많았다.<br>
+Deferred 인터페이스의 주석을 보고 이해가갔다.<br>
+
+스레드를 차단하지 않고 이 값이 완료될 때까지 기다렸다가 지연된 계산이 완료되면 다시 시작하여 결과 값을 반환하거나 지연된 항목이 취소된 경우 해당 예외를 throw합니다.(번역)<br>
+
+
 
 
 
