--- a/코루틴과 동시성 프로그래밍/코루틴 컨텍스트와 디스패처.md
+++ b/코루틴과 동시성 프로그래밍/코루틴 컨텍스트와 디스패처.md
@@ -35,6 +35,128 @@ newSingleThreadContext : Fast Campus @coroutine#6<br>
 <ol>
   <li>`Default`는 코어 수에 비례하는 스레드 풀에서 수행한다.</li>
   <li>`IO`는 코어수 보다 훨씬 많은 스레드를 가지는 스레드 풀이다. IO작업은 CPU를 덜 소모한다.</li>
-  <li>`Unconfined`는 어디에도 속하지 않는다. 지금 시점에는 부모의 스레드에서 수행된다.</li>
+  <li>`Unconfined`는 어디에도 속하지 않는다. 지금 시점에는 부모의 스레드에서 수행된다. 한 번이라도 잠이들었다 깨어나면 어디에서 수행될지 모름</li>
   <li>`newSingleThreadContext`는 항상 새로운 스레드를 만든다.</li>
 </ol>
+
+
+### async에서 코루틴 디스패처 사용
+`launch`외에 `async`, `withContext` 등의 코루틴 빌더에도 디스패처를 사용할 수 있다.
+
+~~~kotlin
+fun main() {
+    runBlocking {
+        async {
+            println("부모의 콘텐스트 / ${Thread.currentThread().name}")
+        }
+    
+        async(Dispatchers.Default) {
+            println("Default / ${Thread.currentThread().name}")
+        }
+
+        async(Dispatchers.Default) {
+            println("IO / ${Thread.currentThread().name}")
+        }
+
+        async(Dispatchers.Unconfined) {
+            println("Unconfined / ${Thread.currentThread().name}")
+        }
+
+        async(newSingleThreadContext("Fast Campus")) {
+            println("newSingleThreadContext / ${Thread.currentThread().name}")
+        }
+    }
+}
+~~~
+
+### Confined 디스패처 테스트
+Confined는 처음에는 부모의 스레드에서 수행된다. 하지만 한번 중단점(suspension point)에 오면 바뀌게 된다.
+
+~~~kotlin
+fun main() {
+    runBlocking {
+        async(Dispatchers.Unconfined) {
+            println("Unconfined / ${Thread.currentThread().name}")
+            delay(1000L)
+            println("Unconfined / ${Thread.currentThread().name}")
+        }
+	}
+}
+~~~
+실행결과 : <br>
+Unconfined / main @coroutine#2<br>
+Unconfined / kotlinx.coroutines.DefaultExecutor @coroutine#2<br>
+
+`Unconfined`는 중단점 이후 어느 디스패처에서 수행될지 예측하기 어렵다.<br>
+가능한 확실한 디스패처를 사용해야한다.<br>
+
+
+### 부모가 있는 Job과 없는 Job
+코루틴을 컨트롤하기 위해 `Job`을 제공해준다. `Job`은 코루틴의 상태를 가지고 있다.<br>
+코루틴 스코프, 코루틴 컨텍스트는 구조화되어 있고, 부모에게 계층적으로 되어있다.<br>
+코루틴 컨텍스트의 `Job`역시 부모에게 의존적이다. 부모를 캔슬했을 때, 영향은 과연 어떨까?<br>
+
+기본적으로 코루틴을 만들면 부모의 코루틴을 상속받는다.
+
+~~~kotlin
+fun main() {
+    runBlocking {
+        val job = launch {
+            launch(Job()){ 
+                // Job을 만들게 되면 더이상 부모 자식이 아니다.
+                // 기본적으로 Job은 누가 부모인지 알고있는 Job이기 때문에.
+                // Job을 생성하면 가족관의연결이 끊어진다.
+                
+                println(coroutineContext[Job])
+                println("launch1: ${Thread.currentThread().name}")
+                delay(1000)
+                println("3!")
+            }
+            
+            launch {
+                println(coroutineContext[Job])
+                println("launch2: ${Thread.currentThread().name}")
+                delay(1000)
+                println("1!")
+            }
+        }
+        
+        delay(500)
+        job.cancelAndJoin()
+        delay(1000)
+	}
+}
+~~~
+
+실행결과 : <br>
+"coroutine#3":StandaloneCoroutine{Active}@735b478<br>
+launch1: main @coroutine#3<br>
+"coroutine#4":StandaloneCoroutine{Active}@234bef66<br>
+launch2: main @coroutine#4<br>
+3!<br>
+
+### 코루틴 엘리먼트 결합
+여러 코루틴 엘리먼트를 한번에 사용할수 있다.`+` 연산으로 엘리먼트를 합치면 된다.<br>
+합쳐진 엘리먼트들은 `coroutineContext[XXX]`로 조회할 수 있다.
+
+~~~kotlin
+fun main() {
+    runBlocking {
+        launch(Dispatchers.IO + CoroutineName("launch1")) {
+            println("launch1: ${Thread.currentThread().name}")
+            println(coroutineContext[CoroutineDispatcher])
+            println(coroutineContext[CoroutineName])
+        }
+    }     
+}
+~~~
+
+실행결과 : <br>
+launch1: DefaultDispatcher-worker-1 @launch1#2<br>
+Dispatchers.IO<br>
+CoroutineName(launch1)<br>
+
+
+
+
+
