--- a/비동기 데이터 스트림, 플로우/플로우 예외처리하기.md
+++ b/비동기 데이터 스트림, 플로우/플로우 예외처리하기.md
@@ -75,3 +75,23 @@ fun simple(): Flow<String> =
 ~~~
 
 ### catch 투명성
+`catch` 연산자는 업스트림(catch 연산자를 쓰기 전의 코드)에만 영향을 미치고 다운스트림에는 영향을 미치지 않는다. 이를 catch의 투명성이라 한다.
+
+~~~kotlin
+fun main() = runBlocking<Unit> {
+    simple()
+    	.catch { e -> println("Cauht $e")} // simple을 호출하는 곳에선 영향을 미칠 수 있다.
+        // catch를 기준으로 위에있는건(simple())업 스트림 아래에 있는건 다운스트림.
+        .collect { value -> // collect부분은 다운스트림이기 때문에 예외를 처리할 수 없다.
+            check(value <= 1) { "Collected $value" }
+            println(value)
+        }
+}
+
+fun simple(): Flow<Int> = flow { // 플로우에서 예외를 발생하는건 main에 catch에서 다룰 수 있다.
+    for(i in 1..3){
+        println("Emitting $i")
+        emit(i)
+    }
+}
+~~~
