Update 채널 파이프 라인.md

--- a/코루틴 채널/채널 파이프 라인.md
+++ b/코루틴 채널/채널 파이프 라인.md
@@ -35,6 +35,7 @@ fun CoroutineScope.produceStringNumbers(numbers: ReceiveChannel<Int>): ReceiveCh
 여러 채널을 이용해서 데이터를 순차적으로 가공할 수 있다. 여러개의 채널이 순차적으로 무언가를 하는걸 마치 파이프와 연결된 파이프 라인과 같다고 한다.<br>
 
 ### 홀수 필터
+~~~kotlin
 fun main() = runBlocking<Unit> {
     val numbers = produceNumbers() // numbers: 리시브 채널, send X
     val stringNumbers = filterOdd(numbers) // send x filterOdd 함수의 리턴 값이 리시브 채널임, 프로듀스 내부에서만 send 가능
@@ -60,6 +61,7 @@ fun CoroutineScope.filterOdd(numbers: ReceiveChannel<Int>): ReceiveChannel<Strin
         }
     }
 }
+~~~
 
 수행결과 : <br>
 1!<br>
